Updated paths to not include capitals
