# docs/swagger.json
@@ -69,7 +69,7 @@
                 }
             }
         },
-        "/movingImages": {
+        "/moving-images": {
             "get": {
                 "description": "Moving images queries",
                 "produces": [
@@ -114,6 +114,44 @@
                 }
             }
         },
+        "/moving-images-ent/entity": {
+            "get": {
+                "description": "Moving images get specific entity query",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MovingImages Entity"
+                ],
+                "summary": "Moving images get specific entity query",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "string id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.EntityReturnStruct"
+                        }
+                    },
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/sparql": {
             "post": {
                 "description": "Send sparql direct to neptune",
@@ -141,6 +179,9 @@
             "properties": {
                 "description": {
                     "$ref": "#/definitions/main.TitleTopicStructValues"
+                },
+                "identifier": {
+                    "$ref": "#/definitions/main.IdentifierReturnValues"
                 },
                 "title": {
                     "$ref": "#/definitions/main.TitleTopicStructValues"
@@ -279,6 +320,28 @@
                     "type": "string"
                 },
                 "urlParameters": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.EntityReturnStruct": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.BindingsTitleTopicUrlDescription"
+                    }
+                }
+            }
+        },
+        "main.IdentifierReturnValues": {
+            "type": "object",
+            "properties": {
+                "type": {
+                    "type": "string"
+                },
+                "value": {
                     "type": "string"
                 }
             }
